# theta_studio

./: README.md  __init__.py  animation.py  camera.py  entity.py  font.py  funcs.py  game.py  input.py  level.py  particle.py  physics.py  pyproject.toml  setup.py  sfx.py  ui.py
data/anims/playeridle/: config.json
data/fonts/: order
data/worlds/: 0.json
test/: main.py
theta/: __init__.py  animation.py  camera.py  entity.py  font.py  game.py  gfx.py  input.py  level.py  particle.py  physics.py  sfx.py  text.py  ui.py  utils.py
theta.egg-info/: PKG-INFO  SOURCES.txt
